fixed overflow

--- a/style.scss
+++ b/style.scss
@@ -41,7 +41,8 @@ html {
   overflow: hidden;
 }
 
-.main article {
+.main article,
+.block__margin {
   width: 129.6rem;
   margin: 0 auto;
   position: relative;
@@ -50,6 +51,10 @@ html {
 .main article.nomargin {
   margin: 0;
   width: 100%;
+}
+
+.main article.noover {
+  overflow: visible;
 }
 
 // .main .first {
